add_executable(vkFirstTest)
message(STATUS "Adding vkFirstTest executable")
aux_source_directory(./ VK_FIRST_TEST_SRC)
message(STATUS "Sandbox source files: ${VK_FIRST_TEST_SRC}")
target_sources(vkFirstTest PRIVATE ${VK_FIRST_TEST_SRC})
target_link_libraries(vkFirstTest PUBLIC vulkan_lib SDL2 Vulkan::Vulkan)
target_include_directories(vkFirstTest PUBLIC ${PROJECT_SOURCE_DIR}/vklib)
target_include_directories(vkFirstTest PUBLIC ${PROJECT_SOURCE_DIR}/include)

CopyDLL(vkFirstTest)
